# watershed

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  gpt-context.md  imgui.ini
experiments/agricultural-encounter-001/: CMakeLists.txt  console_ui.cpp  console_ui.h  encounter.cpp  encounter.h  localized_intervention.cpp  main.cpp
experiments/scalar-field-flooding/: 1-scalar-field-flooding.cpp  CMakeLists.txt  device-brainstorm-ancient-modern-spirit.md  experiment-1-pseudorandom-encounter-config.md  future-wfc-encounter-notes.md  iteration-1-sprint-1.md  map_generation.cpp  map_generation.h  procgen-reference-games.md  run-tests.ps1  simulation.cpp  simulation.h  simulation_tests.cpp  terrain.cpp  terrain.h  test_main.cpp  ui.cpp  ui.h
experiments/sea-fed-packet-pump-003/: CMakeLists.txt  dashboard.cpp  dashboard.h  main.cpp  simulator.cpp  simulator.h
experiments/tide-logic-regulator-002/: CMakeLists.txt  dashboard.cpp  dashboard.h  fluid_control_systems.md  main.cpp  simulator.cpp  simulator.h
experiments/voxel-infrastructure-004/: BEGINNERS_GUIDE.md  CMakeLists.txt  TUTORIAL.md  dashboard.cpp  dashboard.h  main.cpp  simulator.cpp  simulator.h  voxel_simulation_engine_core_architecture_context_v0_2.md  world_definition.cpp  world_definition.h
experiments/voxel-infrastructure-004/subexperiments/voxel-d3d12-001/: CMakeLists.txt  README.md  main.cpp
projects/grannys-house-trials/: AGENT_CONTEXT.json  CAST_AND_SCORING.md  CMakeLists.txt  DEVELOPMENT_GUIDE.md  MILESTONES.md  PLAYTEST_PROTOCOL_V0.md  PROJECT_BRIEF.md  README.md  SCENARIO_001_GRANNYS_YARD.md  STATUS.md  check_html.py
projects/grannys-house-trials/apps/: CMakeLists.txt
projects/grannys-house-trials/apps/scaffold/: CMakeLists.txt  main.cpp
projects/grannys-house-trials/books/: README.md  bootstrap.py  configure.py  extract_html.py  extract_html_page.py  extract_index.py  extract_markdown.py  lookup.py  manifest.json
projects/grannys-house-trials/books/cpp-guidelines/: index.db
projects/grannys-house-trials/books/directx-specs/: index.db
projects/grannys-house-trials/books/win32-api/: index.db
projects/grannys-house-trials/handoff/: 2026-05-05-full-brain-dump.md  2026-05-05-history-and-grounding-index.md  2026-05-05-latest-commit-review.md  2026-05-05-project-state-handoff.md  2026-05-10-knowledge-base-session.md  2026-05-13-grass-field-003-snapshots.md  2026-05-23-grass-field-004-input-resize-and-picking-handoff.md  2026-05-23-grass-field-004-journal-entry.md  2026-06-01-grass-field-003-fluid-erosion-journal-entry.md  2026-06-07-ai-portfolio-context.md  2026-06-14-grass-field-003-slosh-handoff.md  2026-06-14-grass-field-003-slosh-journal-entry.md  README.md
projects/grannys-house-trials/modules/: CMakeLists.txt
projects/grannys-house-trials/modules/gfx/: CMakeLists.txt
projects/grannys-house-trials/modules/gfx/d3d12_renderer/: ARCHITECTURE.md  CMakeLists.txt  EXTRACTION_OVERVIEW.md  PHASE_1_COMPLETION.md  PHASE_3_COMPLETION.md  README.md
projects/grannys-house-trials/modules/gfx/src/: orbit_camera.cpp
projects/grannys-house-trials/modules/playtest/: CMakeLists.txt
projects/grannys-house-trials/modules/playtest/src/: agent_command.cpp  evidence_board_panel.cpp  evidence_board_view.cpp  grannys_yard_session.cpp  turn_packet.cpp
projects/grannys-house-trials/modules/sim/: CMakeLists.txt
projects/grannys-house-trials/modules/sim/src/: adaptive_terrain_ownership_field.cpp  grannys_yard_scenario.cpp  grass_field.cpp  round_log.cpp  (+2 more)
projects/grannys-house-trials/modules/util/: CMakeLists.txt
projects/grannys-house-trials/subprojects/: CMakeLists.txt  README.md
projects/grannys-house-trials/subprojects/grass-field-001/: CMakeLists.txt  README.md  main.cpp
projects/grannys-house-trials/subprojects/grass-field-002/: CMakeLists.txt  README.md  main.cpp
projects/grannys-house-trials/subprojects/grass-field-003/: CMakeLists.txt  LESSON_CATALOG.md  PLAN.md  fluid_compute_phase1_benchmark.cpp  fluid_sim_benchmark.cpp  lesson_experiment_cellular_fluid_active_sources.md  lesson_experiment_cellular_fluid_cpu_parallel.md  lesson_experiment_cellular_fluid_hlsl_compute_phase1.md  lesson_experiment_cellular_fluid_hlsl_compute_phase2_tiled_resident.md  lesson_experiment_cellular_fluid_sim.md  lesson_experiment_cellular_fluid_sim_upgrade.md  lesson_experiment_hydraulic_erosion_rain_sim.md  lesson_experiment_obrien_volume_flow_sim.md  lesson_experiment_pipe_flux_shallow_water_sim.md  lesson_experiment_raycast_renderer.md  lesson_experiment_shallow_water_heightfield_cpu_basic.md  lesson_experiment_simple_erosion_sim.md  lesson_experiment_slosh_basin_flow_sim.md  lesson_experiment_slosh_mac_grid_sim.md  lesson_experiment_split_lod_renderer.md  lesson_experiment_terrain_head_pipe_flow_sim.md  lesson_experiment_virtual_pipe_fluid_sim.md  lesson_experiment_wireframe_renderer.md  lesson_step1.md  lesson_step10.md  lesson_step2.md  lesson_step3.md  lesson_step4.md  lesson_step5.md  lesson_step6.md  lesson_step7.md  lesson_step8.md  lesson_step9.md  main.cpp  main_step1.cpp  main_step10.cpp  main_step2.cpp  main_step3.cpp  main_step4.cpp  main_step7.cpp  (+2 more)
projects/grannys-house-trials/subprojects/grass-field-004/: CMakeLists.txt  PLAN.md  README.md  lesson_2026-05-23_input_resize_picking.md  main.cpp
projects/grannys-house-trials/subprojects/grass-field-005/: PLAN.md  README.md
projects/grannys-house-trials/tests/: CMakeLists.txt  d3d12_renderer_test.cpp
projects/grannys-house-trials/tests/gfx/: orbit_camera_tests.cpp  ui_frame_renderer_tests.cpp
projects/grannys-house-trials/tests/playtest/: agent_command_tests.cpp  evidence_board_view_tests.cpp  grannys_yard_session_tests.cpp  playtest_protocol_tests.cpp  round_result_tests.cpp  scenario_001_script_regression_tests.cpp
projects/grannys-house-trials/tests/sim/: adaptive_terrain_ownership_field_tests.cpp  grannys_yard_scenario_tests.cpp  grass_field_tests.cpp  gravity_erosion_field_tests.cpp  round_log_tests.cpp  sparse_refined_patch_field_tests.cpp
projects/grannys-house-trials/tests/util/: non_empty_string_tests.cpp
(+184 files in other folders)
